syntax="proto3";

package usermanagement;

service UserManagement {
    rpc LoginUser(LoginRequest) returns (LoginResponse) {}
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse) {}
}



message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}